--- a/about-us.html
+++ b/about-us.html
@@ -152,9 +152,9 @@
             <div class="footer__addr">
                 <h1 class="footer__logo">Ventinove Dental Care</h1>
                 <ul>
-                    <li>Address : Mitlton Str. 26-27 London UK</li>
+                    <li>Address : Go Work, Menara Rajawali</li>
                     <li>Phone : +62 812345678999</li>
-                    <li>Email : exampleemail@gmail.com</li>
+                    <li>Email : ventinove@gmail.com</li>
                 </ul>
             </div>
             
@@ -168,7 +168,7 @@
             </div>
 
             <div class="nav__services">
-                <p class="srvc__title">Services</p>
+                <a href="services.html"><p class="srvc__title">Services</p></a>
                 <ul>
                     <li>Tooth Filling</li>
                     <li>Tooth Whitening</li>
@@ -181,7 +181,7 @@
                 </ul>
             </div>
         </div> 
- 
+
         <div class="copyright">
             <p>Copyright &copy; 2023 All rights reserved | This template was made by GROUP 29</p>
         </div>
