--- a/dentist.html
+++ b/dentist.html
@@ -114,42 +114,42 @@
     </section>
     <!-- END CONTENT SECTION -->
 
-    <!-- FOOTER -->
-    <footer class="footer">
-        <div class="footer_content">
-            <div class="footer__addr">
-                <h1 class="footer__logo">Ventinove Dental Care</h1>
-                <ul>
-                    <li>Address : Mitlton Str. 26-27 London UK</li>
-                    <li>Phone : +62 812345678999</li>
-                    <li>Email : exampleemail@gmail.com</li>
-                </ul>
-            </div>
-            
-            <div class="footer__nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="dentist.html">Dentist</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+   <!-- FOOTER -->
+   <footer class="footer">
+    <div class="footer_content">
+        <div class="footer__addr">
+            <h1 class="footer__logo">Ventinove Dental Care</h1>
+            <ul>
+                <li>Address : Go Work, Menara Rajawali</li>
+                <li>Phone : +62 812345678999</li>
+                <li>Email : ventinove@gmail.com</li>
+            </ul>
+        </div>
+        
+        <div class="footer__nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="dentist.html">Dentist</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
 
-            <div class="nav__services">
-                <p class="srvc__title">Services</p>
-                <ul>
-                    <li>Tooth Filling</li>
-                    <li>Tooth Whitening</li>
-                    <li>Denture Fitting</li>
-                    <li>Dental Health Consultation</li>
-                    <li>Tooth Extraction</li>
-                    <li>Professional Scaling</li>
-                    <li>Dental Checkup</li>
-                    <li>Braces Installation</li>
-                </ul>
-            </div>
-        </div> 
- 
+        <div class="nav__services">
+            <a href="services.html"><p class="srvc__title">Services</p></a>
+            <ul>
+                <li>Tooth Filling</li>
+                <li>Tooth Whitening</li>
+                <li>Denture Fitting</li>
+                <li>Dental Health Consultation</li>
+                <li>Tooth Extraction</li>
+                <li>Professional Scaling</li>
+                <li>Dental Checkup</li>
+                <li>Braces Installation</li>
+            </ul>
+        </div>
+    </div> 
+
         <div class="copyright">
             <p>Copyright &copy; 2023 All rights reserved | This template was made by GROUP 29</p>
         </div>
