--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    
 
 </head>
 <body>
@@ -126,9 +127,9 @@
             <div class="footer__addr">
                 <h1 class="footer__logo">Ventinove Dental Care</h1>
                 <ul>
-                    <li>Address : Mitlton Str. 26-27 London UK</li>
+                    <li>Address : Go Work, Menara Rajawali</li>
                     <li>Phone : +62 812345678999</li>
-                    <li>Email : exampleemail@gmail.com</li>
+                    <li>Email : ventinove@gmail.com</li>
                 </ul>
             </div>
             
@@ -142,7 +143,7 @@
             </div>
 
             <div class="nav__services">
-                <p class="srvc__title">Services</p>
+                <a href="services.html"><p class="srvc__title">Services</p></a>
                 <ul>
                     <li>Tooth Filling</li>
                     <li>Tooth Whitening</li>
